--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.82.0"
   },
   "scripts": {
     "start": "react-scripts start",
